--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <body>
 	<h1>Applicant Name is Hafsa Said Ali</h1>
 	<p><b>Applicant's Information</b></p>
+	<p>Hafsa lives with her parents and her two nieces </p>
+	<p> Hafsa has Master Degree of ICT specialist Information Security</p> 
 
 </body>
 </html>
